// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles multiple internal schedules for the same timeframe 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30am — 12:00pm",
  },
  Object {
    "isActive": true,
    "label": "Hours",
    "status": "1:00pm — 3:00pm",
  },
]
`;

exports[`handles multiple named schedules for the same timeframe 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30am — 12:00pm",
  },
  Object {
    "isActive": false,
    "label": "Hours2",
    "status": "10:30am — 12:00pm",
  },
  Object {
    "isActive": true,
    "label": "Hours2",
    "status": "1:00pm — 3:00pm",
  },
]
`;

exports[`returns false if none are open 1`] = `
Array [
  Object {
    "isActive": false,
    "label": "Hours",
    "status": "10:30am — 2:00pm",
  },
]
`;
